# vr-datalake-user

./: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: tests.yml
configs/: prod.yaml
notebooks/: anonymization_gcs_sample.ipynb
src/: main.py
src/anonymizer/: batch.py  blur.py  config.py  metadata.py  paths.py  service.py
src/anonymizer/detectors/: common.py  env.py  factory.py
src/anonymizer/detectors/face/: retinaface.py
src/anonymizer/detectors/plate/: ultralytics.py
src/gcs/: storage.py
tests/: fakes.py
tests/anonymizer/: test_batch.py  test_config.py  test_metadata.py  test_paths.py  test_service.py
tests/anonymizer/detectors/: test_detectors.py
tests/gcs/: test_storage.py
